--- a/FASE1/makefile
+++ b/FASE1/makefile
@@ -1,36 +1,35 @@
 CC = gcc
-BIN_dir = binary
-INC_dir = include
-OBJ_dir = object
-SRC_dir = source
-OBJECTOS = data.o entry.o tree.o
+INC_DIR = include
+OBJ_DIR = object
+BIN_DIR = binary
+SRC_DIR = source
+
+OBJETOS = data.o entry.o tree.o
 
 data.o = data.h
+entry.o = data.h entry.h
+tree.o = entry.h data.h tree.h tree-private.h
 test_data.o = data.h
-entry.o = entry.h
-test_entry.o = entry.h
-tree.o = tree.h tree-private.h
-test_tree.o = tree.h tree-private.h
+test_entry.o = entry.h data.h
+test_tree.o = tree-private.h tree.h entry.h data.h
 
-
-
-CFLAGS = -Wall -I $(INC_dir) -g
+CFLAGS = -Wall -g -I
 LIBS = -lrt -lpthread
 
-vpath %.o $(OBJ_dir)
+all: data.o entry.o tree.o test_data.o test_entry.o test_tree.o test_data test_entry test_tree
+
+%.o: $(SRC_DIR)/%.c
+	$(CC) $(CFLAGS) $(INC_DIR) -o $(OBJ_DIR)/$@ -c $<
 
 test_data: data.o test_data.o
-	$(CC) $(addprefix $(OBJ_dir)/,$(OBJECTOS)) -o $(BIN_dir)/$@
+	$(CC) $(addprefix $(OBJ_DIR)/,$^) -o $(BIN_DIR)/$@
 
-test_entry: entry.o test_entry.o
-	$(CC) $(addprefix $(OBJ_dir)/,$(OBJECTOS)) -o $(BIN_dir)/$@
+test_entry: data.o entry.o test_entry.o
+	$(CC) $(addprefix $(OBJ_DIR)/,$^) -o $(BIN_DIR)/$@
 
-test_tree: tree.o test_tree.o
-	$(CC) $(addprefix $(OBJ_dir)/,$(OBJECTOS)) -o $(BIN_dir)/$@
-
-%.o: $(SRC_dir)/%.c $($@)
-	$(CC) $(CFLAGS) -o $(OBJ_dir)/$@ -c $<
+test_tree: data.o entry.o tree.o test_tree.o
+	$(CC) $(addprefix $(OBJ_DIR)/,$^) -o $(BIN_DIR)/$@
 
 clean:
-	rm –f $(OBJ_dir)/*.o
-	rm –f $(BIN_dir)/*
+	rm –f $(OBJ_DIR)/.o
+	rm –f $(BIN_DIR)/
