Makefile com serialization e simplificado (resultados dos testes e leaks iguais ao makefile anterior)

--- a/FASE1/makefile
+++ b/FASE1/makefile
@@ -2,10 +2,11 @@ BIN_DIR = binary
 INC_DIR = include
 OBJ_DIR = object
 SRC_DIR = source
-OBJECTOS = data.o entry.o tree.o
+OBJECTOS = data.o entry.o tree.o serialization.o
 data.o =
 entry.o = data.h
 tree.o = entry.h data.h tree-private.h
+serialization.o = entry.h data.h
 test_data.o = data.h
 test_entry.o = entry.h data.h
 test_tree.o = tree-private.h tree.h entry.h data.h
