Nova versão, quit já funciona e proto com novos param

--- a/FASE2/grupo21/makefile
+++ b/FASE2/grupo21/makefile
@@ -1,37 +1,44 @@
-#
-#Grupo 21:
-#	Francisco Teixeira | FC56305
-#	Alexandre Rodrigues | FC54472
-#	Afonso Soares | FC56314
-#
 
-BIN_DIR = binary
-INC_DIR = include
-LIB_DIR = lib
-OBJ_DIR = object
-SRC_DIR = source
-#Ficheiros do projeto 1 podem ser removidos aqui
-OBJECTOS = data.o entry.o tree.o serialization.o client-lib.o tree-client.o tree-server.o
+
 CC = gcc
-CFLAGS = -Wall -g -I 
-LIBS = -lrt -lpthread
+LD= ld
+INC_DIR = include
+OBJ_DIR = object
+BIN_DIR = binary
+SRC_DIR = source
+LIB_DIR = lib
 
-#Ficheiros do projeto 1 podem ser removidos aqui
-all: data.o entry.o tree.o serialization.o client-lib.o tree-client tree-server
+#tree-server
+tree-server = tree_server.o data.o entry.o tree.o message.o tree_skel.o network_server.o sdmessage.pb-c.o
+#tree-client
+tree-client = tree_client.o data.o entry.o message.o client_stub.o network_client.o sdmessage.pb-c.o
 
-client-lib.o: data.o entry.o client_stub.o network_client.o sdmessage.pb-c.o
-	ld -r $(addprefix $(OBJ_DIR)/,$^) -o $(LIB_DIR)/$@
+client-lib = client_stub.o network_client.o data.o entry.o message.o sdmessage.pb-c.o
 
-tree-client: data.o entry.o tree_client.o client_stub.o network_client.o sdmessage.pb-c.o
-	$(CC) $(addprefix $(OBJ_DIR)/,$^) -I/usr/local/include -L/usr/local/lib -lprotobuf-c -o $(BIN_DIR)/$@
+OBJETOS = client-lib.o tree-client.o tree-server.o
 
-tree-server: data.o entry.o tree.o tree_server.o network_server.o tree_skel.o sdmessage.pb-c.o
-	$(CC) $(addprefix $(OBJ_DIR)/,$^) -I/usr/local/include -L/usr/local/lib -lprotobuf-c -o $(BIN_DIR)/$@
+CFLAGS = -g -Wall -I
+
+LIBS=-lrt -lpthread
+
+all: client-lib.o tree-client tree-server
+
 
 %.o: $(SRC_DIR)/%.c
 	$(CC) $(CFLAGS) $(INC_DIR) -o $(OBJ_DIR)/$@ -c $<
 
+
+client-lib.o: $(client-lib)
+			ld -r $(addprefix $(OBJ_DIR)/,$^) -o $(LIB_DIR)/$@
+
+tree-client: $(tree-client)
+	$(CC)  $(addprefix $(OBJ_DIR)/,$^) -I/usr/local/include -L/usr/local/lib -lprotobuf-c -o $(BIN_DIR)/$@
+
+tree-server: $(tree-server)
+	$(CC) $(addprefix $(OBJ_DIR)/,$^) -I/usr/local/include -L/usr/local/lib -lprotobuf-c -o $(BIN_DIR)/$@
+
+
 clean:
-	rm –f $(OBJ_DIR)/.o
-	rm –f $(BIN_DIR)/
-	rm –f $(LIB_DIR)/
+	rm -f $(OBJ_DIR)/*.o
+	rm -f $(BIN_DIR)/*
+	rm -f $(LIB_DIR)/*
