--- a/FASE2/.vscode/settings.json
+++ b/FASE2/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "message-private.h": "c",
         "sdmessage.pb-c.h": "c",
-        "client_stub-private.h": "c"
+        "client_stub-private.h": "c",
+        "signal.h": "c"
     }
 }
