--- a/FASE3/grupo21/.vscode/settings.json
+++ b/FASE3/grupo21/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "sdmessage.pb-c.h": "c"
+        "sdmessage.pb-c.h": "c",
+        "message-private.h": "c",
+        "network_server.h": "c"
     }
 }
