--- a/FASE3/grupo21/.vscode/settings.json
+++ b/FASE3/grupo21/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "sdmessage.pb-c.h": "c",
         "message-private.h": "c",
-        "network_server.h": "c"
+        "network_server.h": "c",
+        "stdbool.h": "c"
     }
 }
