--- a/FASE3/grupo21/.vscode/settings.json
+++ b/FASE3/grupo21/.vscode/settings.json
@@ -3,6 +3,8 @@
         "sdmessage.pb-c.h": "c",
         "message-private.h": "c",
         "network_server.h": "c",
-        "stdbool.h": "c"
+        "stdbool.h": "c",
+        "tree_skel.h": "c",
+        "network_client.h": "c"
     }
 }
