--- a/FASE4/grupo21/makefile
+++ b/FASE4/grupo21/makefile
@@ -21,10 +21,10 @@ client-lib.o: data.o entry.o message.o client_stub.o network_client.o sdmessage.
 	ld -r $(addprefix $(OBJ_DIR)/,$^) -o $(LIB_DIR)/$@
 
 tree-client: data.o entry.o message.o tree_client.o client_stub.o network_client.o sdmessage.pb-c.o
-	$(CC) $(addprefix $(OBJ_DIR)/,$^) -I/usr/local/include -L/usr/local/lib -lprotobuf-c -o $(BIN_DIR)/$@
+	$(CC) $(addprefix $(OBJ_DIR)/,$^) -I/usr/local/include -L/usr/local/lib -lprotobuf-c -lzookeeper_mt -o $(BIN_DIR)/$@
 
 tree-server: data.o entry.o tree.o message.o tree_server.o network_server.o tree_skel.o sdmessage.pb-c.o
-	$(CC) $(addprefix $(OBJ_DIR)/,$^) -I/usr/local/include -L/usr/local/lib -lprotobuf-c $(LIBS) -o $(BIN_DIR)/$@
+	$(CC) $(addprefix $(OBJ_DIR)/,$^) -I/usr/local/include -L/usr/local/lib -lprotobuf-c -lzookeeper_mt $(LIBS) -o $(BIN_DIR)/$@
 
 %.o: $(SRC_DIR)/%.c
 	$(CC) $(CFLAGS) $(INC_DIR) -o $(OBJ_DIR)/$@ -c $<
